Fixed a bug causing the tutorial text to overflow

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -137,6 +137,7 @@ aside{
     background-color: $border_color;
     color: white;
     padding: 1em;
+    font-size: small;
 
     ul{
         padding-left: 1em;
