--- a/css/widescreen.scss
+++ b/css/widescreen.scss
@@ -17,3 +17,7 @@ section{
 #luigi_background{
     display: none;
 }
+
+#tutorial_text{
+    top: calc(0%);
+}
